# openprescribing-hospitals

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yaml  dummy_data.csv  entrypoint.sh  manage.py  organisations.csv  package-lock.json  package.json  postcss.config.cjs  prefect.yaml  pyproject.toml  pytest.ini  requirements.txt  svelte.config.js  tailwind.config.mjs  urls.py  vite.config.js
.do/: preview-app.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: measure.yml
.github/workflows/: delete-preview.yaml  deploy-preview.yaml  main.yml
assets/.vite/: manifest.json
demo/: settings.py  urls.py
dummy_data/: dose.csv  ingredient.csv  ingredient_quantity.csv  scmd.csv  vmp.csv  vtm.csv
openprescribing-hospitals/: asgi.py  settings.py  urls.py  wsgi.py
pipeline/: bq_tables.py  calculate_ddd_quantity.py  calculate_doses.py  calculate_ingredient_quantity.py  config.py  import_adm_route_mapping.py  import_atc_ddd.py  import_dmd.py  import_dmd_supp.py  import_org_ae_status.py  import_organisations.py  import_scmd.py  import_unit_conversion.py  pipeline.py  process_scmd.py  setup_bq_tables.py  utils.py  vmp_ddd_mapping.py
pipeline/aware/: create_aware_vmp_mapping_processed.py
pipeline/data/: vmp_expressed_as.csv
pipeline/dmd/: import_dmd.py  import_dmd.sql  import_dmd_base.py  import_dmd_filtered.py  import_dmd_filtered.sql  import_dmd_full.py  import_dmd_full.sql  import_dmd_main.py  import_dmd_supp.py  import_dmd_uom.py  import_dmd_uom.sql
pipeline/flows/: import_atc.py  (+36 more)
src/: AnalyseBox.svelte  Component.svelte  DataTable.svelte  Layout.svelte  Measure.svelte  ResultsBox.svelte  Search.svelte  SearchableDropdown.svelte  TimeSeriesChart.svelte  VMPList.svelte
templates/: about.html  alerts.html  analyse.html  base.html  blog_list.html  contact.html  error.html  faq.html  index.html  login.html  maintenance.html  measure_item.html  measure_trusts.html  measures.html  measures_list.html  org_submissions.html  papers_list.html  product_details.html  submission_history.html
viewer/: admin.py  forms.py  measure_denominators.py  middleware.py  mixins.py  models.py  search.py  serializers.py  urls.py  utils.py  views.py
(+477 files in other folders)
